--- a/viz.html
+++ b/viz.html
@@ -88,7 +88,7 @@
       <param name='display_spinner' value='yes' />
       <param name='display_overlay' value='yes' />
       <param name='display_count' value='yes' />
-      <param name='language' value='de-DE' />
+      <param name='language' value='en-US' />
       <param name='filter' value='publish=yes' />
     </object>
 
