--- a/viz.html
+++ b/viz.html
@@ -72,6 +72,21 @@
     </div>
   </header>
 
+  <div class="page-section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-12 py-3 wow fadeInUp">
+          <span class="subhead">Dataset by FBI CDE</span>
+          <h2 class="title-section">Hate Crime Dashboard</h2>
+          <div class="divider"></div>
+  
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+        </div>
+      </div>
+    </div> <!-- .container -->
+  </div> <!-- .page-section -->
+
   <div class='tableauPlaceholder' id='viz1637001231954' style='position: relative'>
     <noscript><a href='#'>
       <img alt='Hate Crime Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1_rss.png' style='border: none' />
@@ -112,6 +127,52 @@
     </script>
 
   </div>
+
+  <style>
+    .embed-container {
+      position: relative; 
+      padding-bottom: 80%; 
+      height: 0; 
+      max-width: 100%;
+    } 
+    .embed-container iframe, .embed-container object, .embed-container iframe{
+      position: absolute; 
+      top: 0; 
+      left: 0; 
+      width: 100%; 
+      height: 100%;
+    } 
+    small{
+      position: absolute; 
+      z-index: 40; 
+      bottom: 0; 
+      margin-bottom: -15px;
+    }
+  </style>
+
+<div class="page-section bg-light">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6 py-3 wow fadeInUp">
+        <span class="subhead">Dataset with Exact Location by DataSD</span>
+        <h2 class="title-section">Hate Crimes in San Diego (2016-2020)</h2>
+        <div class="divider"></div>
+
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+        <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+      </div>
+      <div class="col-lg-6 py-3 wow fadeInRight">
+        <div class="img-fluid py-3 text-center">
+          <div class="embed-container">
+            <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Hate Crimes in San Diego (2016-2020)" src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=e563ca943b924d52ac81e744d3dda5f4&extent=-117.3513,32.6524,-116.8442,32.8963&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light">
+            </iframe>
+          </div> 
+        </div>
+      </div>
+    </div>
+  </div> <!-- .container -->
+</div> <!-- .page-section -->
+
 
 
   <footer class="page-footer bg-image" style="background-image: url(assets/img/world_pattern.svg);">
