add analysis tab

--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
               <a class="nav-link" href="#dataset">Dataset</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="viz.html">Visualizations & Analysis</a>
+              <a class="nav-link" href="viz.html">Dashboards</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="analysis.html">Analysis</a>
+          </li>
           </ul>
         </div>
 
