--- a/viz.html
+++ b/viz.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +19,9 @@
 
   <link rel="stylesheet" href="assets/css/theme.css">
 </head>
+
 <body>
-  
+
   <!-- Back to top button -->
   <div class="back-to-top"></div>
 
@@ -28,7 +30,8 @@
       <div class="container">
         <a href="index.html" class="navbar-brand">Hate Crime<span class="text-primary"> Analysis</span></a>
 
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent"
+          aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -47,8 +50,11 @@
               <a class="nav-link" href="index.html#dataset">Dataset</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="viz.html">Visualizations & Analysis</a>
+              <a class="nav-link" href="viz.html">Dashboards</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="analysis.html">Analysis</a>
+          </li>
           </ul>
         </div>
 
@@ -62,10 +68,10 @@
             <nav aria-label="Breadcrumb">
               <ul class="breadcrumb justify-content-center py-0 bg-transparent">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active">Visualizations & Analysis</li>
+                <li class="breadcrumb-item active">Dashboards</li>
               </ul>
             </nav>
-            <h1 class="text-center">Visualizations & Analysis</h1>
+            <h1 class="text-center">Dashboards</h1>
           </div>
         </div>
       </div>
@@ -79,101 +85,119 @@
           <span class="subhead">Dataset by FBI CDE</span>
           <h2 class="title-section">Hate Crime Dashboard</h2>
           <div class="divider"></div>
-  
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua.</p>
           <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+            
         </div>
       </div>
     </div> <!-- .container -->
   </div> <!-- .page-section -->
 
-  <div class='tableauPlaceholder' id='viz1637001231954' style='position: relative'>
-    <noscript><a href='#'>
-      <img alt='Hate Crime Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1_rss.png' style='border: none' />
-    </a></noscript>
-    <object class='tableauViz'  style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-      <param name='embed_code_version' value='3' /> 
-      <param name='site_root' value='' />
-      <param name='name' value='HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard' />
-      <param name='tabs' value='no' /><param name='toolbar' value='yes' />
-      <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1.png' /> 
-      <param name='animate_transition' value='yes' />
-      <param name='display_static_image' value='yes' />
-      <param name='display_spinner' value='yes' />
-      <param name='display_overlay' value='yes' />
-      <param name='display_count' value='yes' />
-      <param name='language' value='en-US' />
-      <param name='filter' value='publish=yes' />
-    </object>
+<div class='tableauPlaceholder' id='viz1637001231954' style='position: relative'>
+              <noscript><a href='#'>
+                  <img alt='Hate Crime Dashboard '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1_rss.png'
+                    style='border: none' />
+                </a></noscript>
+              <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='en-US' />
+                <param name='filter' value='publish=yes' />
+              </object>
 
-    <script type='text/javascript'>
-      var divElement = document.getElementById('viz1637001231954');
-      var vizElement = divElement.getElementsByTagName('object')[0];
-      if ( divElement.offsetWidth > 800 ) { 
-        vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-      } 
-      else if ( divElement.offsetWidth > 500 ) { 
-        vizElement.style.width='100%';
-        vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
-      } 
-      else { 
-        vizElement.style.width='100%';
-        vizElement.style.height='1727px';
-      }
-      var scriptElement = document.createElement('script');
-      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-      vizElement.parentNode.insertBefore(scriptElement, vizElement);
-    </script>
+              <script type='text/javascript'>
+                var divElement = document.getElementById('viz1637001231954');
+                var vizElement = divElement.getElementsByTagName('object')[0];
+                if (divElement.offsetWidth > 800) {
+                  vizElement.style.width = '100%';
+                  vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                } else if (divElement.offsetWidth > 500) {
+                  vizElement.style.width = '100%';
+                  vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+                } else {
+                  vizElement.style.width = '100%';
+                  vizElement.style.height = '1727px';
+                }
+                var scriptElement = document.createElement('script');
+                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                vizElement.parentNode.insertBefore(scriptElement, vizElement);
+              </script>
 
-  </div>
+            </div>
 
-  <style>
-    .embed-container {
-      position: relative; 
-      padding-bottom: 80%; 
-      height: 0; 
-      max-width: 100%;
-    } 
-    .embed-container iframe, .embed-container object, .embed-container iframe{
-      position: absolute; 
-      top: 0; 
-      left: 0; 
-      width: 100%; 
-      height: 100%;
-    } 
-    small{
-      position: absolute; 
-      z-index: 40; 
-      bottom: 0; 
-      margin-bottom: -15px;
-    }
-  </style>
-
-<div class="page-section bg-light">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-6 py-3 wow fadeInUp">
-        <span class="subhead">Dataset with Exact Location by DataSD</span>
-        <h2 class="title-section">Hate Crimes in San Diego (2016-2020)</h2>
-        <div class="divider"></div>
-
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-        <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
-      </div>
-      <div class="col-lg-6 py-3 wow fadeInRight">
-        <div class="img-fluid py-3 text-center">
-          <div class="embed-container">
-            <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Hate Crimes in San Diego (2016-2020)" src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=e563ca943b924d52ac81e744d3dda5f4&extent=-117.3513,32.6524,-116.8442,32.8963&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light">
-            </iframe>
-          </div> 
+  <div class="page-section bg-light">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-12 py-3 wow fadeInUp">
+          <span class="subhead">Dataset by DataSD</span>
+          <h2 class="title-section">Comparison of Case-Race-Ratio (2013-2019)</h2>
+          <div class="divider"></div>
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
+            et dolore magna aliquyam erat, sed diam voluptua.</p>
+          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <div class="img-fluid py-3 text-center">
+            <div class='tableauPlaceholder' id='viz1637207238496' style='position: relative;'>
+              <noscript>
+                <a href='#'>
+                  <img alt='Dashboard 1 '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sh&#47;ShareofRacesinthePopulationofSanDiego_16372072273260&#47;Dashboard1&#47;1_rss.png'
+                    style='border: none' />
+                </a>
+              </noscript>
+              <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='ShareofRacesinthePopulationofSanDiego_16372072273260&#47;Dashboard1' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sh&#47;ShareofRacesinthePopulationofSanDiego_16372072273260&#47;Dashboard1&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='de-DE' />
+                <param name='filter' value='publish=yes' />
+              </object>
+            </div>
+            <script type='text/javascript'>
+              var divElement = document.getElementById('viz1637207238496');
+              var vizElement = divElement.getElementsByTagName('object')[0];
+              if (divElement.offsetWidth > 800) {
+                vizElement.style.width = '100%';
+                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+              } else if (divElement.offsetWidth > 500) {
+                vizElement.style.width = '100%';
+                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+              } else {
+                vizElement.style.width = '100%';
+                vizElement.style.height = '727px';
+              }
+              var scriptElement = document.createElement('script');
+              scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+              vizElement.parentNode.insertBefore(scriptElement, vizElement);
+            </script>
+          </div>
         </div>
       </div>
-    </div>
-  </div> <!-- .container -->
-</div> <!-- .page-section -->
-
-
+    </div> <!-- .container -->
+  </div> <!-- .page-section -->
 
   <footer class="page-footer bg-image" style="background-image: url(assets/img/world_pattern.svg);">
     <div class="container">
@@ -184,27 +208,33 @@
         </div>
         <div class="col-lg-6 row py-3">
           <h5 class="col-lg-12">Contact Us</h5>
-          <p class="col-lg-6">Saroop Samra:</br><a href="mailto:ssamra1062@sdsu.edu" class="footer-link">ssamra1062@sdsu.edu</a></p>
-          <p class="col-lg-6">Stefan Helm:</br><a href="mailto:shelm8326@sdsu.edu" class="footer-link">shelm8326@sdsu.edu</a></p>
-          <p class="col-lg-6">Nia Fan:</br><a href="mailto:nfan4031@sdsu.edu" class="footer-link">nfan4031@sdsu.edu</a></p>
-          <p class="col-lg-6">Lukas Schwab:</br><a href="mailto:lschwab5388@sdsu.edu" class="footer-link">lschwab5388@sdsu.edu</a></p>
+          <p class="col-lg-6">Saroop Samra:</br><a href="mailto:ssamra1062@sdsu.edu"
+              class="footer-link">ssamra1062@sdsu.edu</a></p>
+          <p class="col-lg-6">Stefan Helm:</br><a href="mailto:shelm8326@sdsu.edu"
+              class="footer-link">shelm8326@sdsu.edu</a></p>
+          <p class="col-lg-6">Nia Fan:</br><a href="mailto:nfan4031@sdsu.edu" class="footer-link">nfan4031@sdsu.edu</a>
+          </p>
+          <p class="col-lg-6">Lukas Schwab:</br><a href="mailto:lschwab5388@sdsu.edu"
+              class="footer-link">lschwab5388@sdsu.edu</a></p>
         </div>
       </div>
 
-      <p class="text-center" id="copyright">Copyright &copy; 2020. Template by <a href="https://macodeid.com/" target="_blank">MACode ID</a></p>
+      <p class="text-center" id="copyright">Copyright &copy; 2020. Template by <a href="https://macodeid.com/"
+          target="_blank">MACode ID</a></p>
     </div>
   </footer>
 
-<script src="assets/js/jquery-3.5.1.min.js"></script>
+  <script src="assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
 
-<script src="assets/js/google-maps.js"></script>
+  <script src="assets/js/google-maps.js"></script>
 
-<script src="assets/vendor/wow/wow.min.js"></script>
+  <script src="assets/vendor/wow/wow.min.js"></script>
 
-<script src="assets/js/theme.js"></script>
+  <script src="assets/js/theme.js"></script>
 
 
 </body>
+
 </html>
