--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="col-lg-6">
           <div class="card-service bg-white wow fadeInUp">
             <div class="header">
-              <img src="assets/img/services/service-1.svg" alt="">
+              <img src="assets/img/Nia_profile.jpeg" style="max-width: 150px; border-radius: 50%;"alt="">
             </div>
             <div class="body">
               <h5 class="text-secondary">Nia Fan</h5>
