worked on analysis tab

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <div class="row justify-content-center wow fadeInUp">
             <div class="col-lg-8">
               <h2 class="mb-4">Check out our Visualizations and Analysis</h2>
-              <form action="viz.html">
+              <form action="analysis.html">
                 <button type="submit" class="btn btn-success">Check it out</button>
               </form>
             </div>
