--- a/viz.html
+++ b/viz.html
@@ -54,7 +54,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="analysis.html">Analysis</a>
-          </li>
+            </li>
           </ul>
         </div>
 
@@ -78,24 +78,16 @@
     </div>
   </header>
 
+
   <div class="page-section">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12 py-3 wow fadeInUp">
-          <span class="subhead">Dataset by FBI CDE</span>
+          <span class="subhead">Dataset by DataSD</span>
           <h2 class="title-section">Hate Crime Dashboard</h2>
           <div class="divider"></div>
-
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
-            
-        </div>
-      </div>
-    </div> <!-- .container -->
-  </div> <!-- .page-section -->
-
-<div class='tableauPlaceholder' id='viz1637001231954' style='position: relative'>
+          <div class="img-fluid py-3 text-center">
+            <div class='tableauPlaceholder' id='viz1637001231954' style='position: relative'>
               <noscript><a href='#'>
                   <img alt='Hate Crime Dashboard '
                     src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1_rss.png'
@@ -138,6 +130,11 @@
               </script>
 
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="page-section bg-light">
     <div class="container">
@@ -146,9 +143,6 @@
           <span class="subhead">Dataset by DataSD</span>
           <h2 class="title-section">Comparison of Case-Race-Ratio (2013-2019)</h2>
           <div class="divider"></div>
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
           <div class="img-fluid py-3 text-center">
             <div class='tableauPlaceholder' id='viz1637207238496' style='position: relative;'>
               <noscript>
