--- a/analysis.html
+++ b/analysis.html
@@ -103,7 +103,7 @@
       margin-bottom: -15px;
     }
   </style>
-  
+
   <div class="page-section">
     <div class="container" id="all" style="display: block;">
       <div class="row align-items-center">
@@ -121,7 +121,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="Hate Crimes in San Diego (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=e563ca943b924d52ac81e744d3dda5f4&extent=-117.3513,32.6524,-116.8442,32.8963&zoom=true&previewImage=false&scale=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=e563ca943b924d52ac81e744d3dda5f4&extent=-117.3513,32.6524,-116.8442,32.8963&zoom=true&previewImage=true&scale=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
           </div>
@@ -136,7 +136,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="SD Hate Crimes - Motivation (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=f32b1ed1084c4ee082c8ee98210450c9&extent=-117.2743,32.6776,-117.0036,32.81&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=f32b1ed1084c4ee082c8ee98210450c9&extent=-117.2743,32.6776,-117.0036,32.81&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
 
@@ -170,7 +170,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="Hate Crimes in San Diego (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=f32b1ed1084c4ee082c8ee98210450c9&extent=-117.2743,32.6776,-117.0036,32.81&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=f32b1ed1084c4ee082c8ee98210450c9&extent=-117.2743,32.6776,-117.0036,32.81&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
           </div>
@@ -185,7 +185,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="SD Hate Crimes - Motivation (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=489ffb5f690c4275affa4c6bfecf7c20&extent=-117.2835,32.6788,-117.0128,32.8112&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=489ffb5f690c4275affa4c6bfecf7c20&extent=-117.2835,32.6788,-117.0128,32.8112&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
 
@@ -219,7 +219,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="Hate Crimes in San Diego (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=5ce0822d68924e4a84c29bd9478fcb3f&extent=-117.4061,32.6342,-116.8647,32.8989&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=5ce0822d68924e4a84c29bd9478fcb3f&extent=-117.4061,32.6342,-116.8647,32.8989&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
           </div>
@@ -234,7 +234,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="SD Hate Crimes - Motivation (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=5eecf7eb484c453d892b4588f22b8d97&extent=-117.4029,32.632,-116.8615,32.8968&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=5eecf7eb484c453d892b4588f22b8d97&extent=-117.4029,32.632,-116.8615,32.8968&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
 
@@ -268,7 +268,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="Hate Crimes in San Diego (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=fcf24ec1871346189dd88b4d78ff7368&extent=-117.3821,32.6408,-116.8406,32.9055&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=fcf24ec1871346189dd88b4d78ff7368&extent=-117.3821,32.6408,-116.8406,32.9055&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
           </div>
@@ -283,7 +283,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="SD Hate Crimes - Motivation (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=2e5fe486303c408482273c1776cebb61&extent=-117.3513,32.6401,-116.8099,32.9048&zoom=true&previewImage=false&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=2e5fe486303c408482273c1776cebb61&extent=-117.3513,32.6401,-116.8099,32.9048&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
 
