--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-md-6 py-5 wow fadeInLeft">
             <h1 class="mb-4">Hate Crime Analysis in San Diego County</h1>
             <p class="text-lg text-grey mb-5">Gain some insight and discover trends about hate crime in San Diego from 1994-2021</p>
-            <a href="#" class="btn btn-primary btn-split">Watch Video <div class="fab"><span class="mai-play"></span></div></a>
+            <a href="https://www.youtube.com/watch?v=kPutz4fXv9I" class="btn btn-primary btn-split">Watch Video <div class="fab"><span class="mai-play"></span></div></a>
           </div>
           <div class="col-md-6 py-5 wow zoomIn">
             <div class="img-fluid text-center">
@@ -95,7 +95,7 @@
       
       <p>The dataset comes from San Diego’s government data and consists of columns such as the time, crime code, block and street, region, weapon, motivation, number of suspects. It also has information regarding the victims which we can analyze to get a better understanding of who has been attacked in the past, the dataset has columns for this such as victim race and victim sex. It also has the same type of information for the suspect as well, which can be used to help analyze what types of people in the past are the perpetrators.</p> 
 
-      <p>instance, on the one hand, we would like to examine the data for the frequency and specific types of hate crimes that occur. Furthermore, we want to analyze the data geographically to find out where the dangerous places are in San Diego.</p>
+      <p>Instance, on the one hand, we would like to examine the data for the frequency and specific types of hate crimes that occur. Furthermore, we want to analyze the data geographically to find out where the dangerous places are in San Diego.</p>
 
       <p>This geographic analysis is especially important to us because we are a team with different cultures and nationalities. Two group members are exchange students and would like to enable other exchange students to see where the most hate crimes are happening. The other two are locals to San Diego and want to gain a better understanding of both the reasons why hate crimes are occurring and if they have been increasing or decreasing over time.</p>
 
