--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col-md-6 py-5 wow fadeInLeft">
             <h1 class="mb-4">Hate Crime Analysis in San Diego County</h1>
             <p class="text-lg text-grey mb-5">Gain some insight and discover trends about hate crime in San Diego from 1994-2021</p>
-            <a href="https://www.youtube.com/watch?v=kPutz4fXv9I" class="btn btn-primary btn-split">Watch Video <div class="fab"><span class="mai-play"></span></div></a>
+            <a href="https://www.youtube.com/watch?v=kPutz4fXv9I"  target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-split">Watch Video <div class="fab"><span class="mai-play"></span></div></a>
           </div>
           <div class="col-md-6 py-5 wow zoomIn">
             <div class="img-fluid text-center">
