--- a/viz.html
+++ b/viz.html
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12 py-3 wow fadeInUp">
-          <span class="subhead">Dataset by DataSD</span>
+          <span class="subhead">Dataset by FBI CDE</span>
           <h2 class="title-section">Hate Crime Dashboard</h2>
           <div class="divider"></div>
           <div class="img-fluid py-3 text-center">
