--- a/analysis.html
+++ b/analysis.html
@@ -181,7 +181,7 @@
             <div class="embed-container">
               <iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
                 title="Hate Crimes in San Diego (2016-2020)"
-                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=fad1efce60c64c81a6a50d601682a29b&extent=-117.3052,32.6768,-116.9688,32.8434&zoom=true&scale=true&legend=true&disable_scroll=true&theme=light">
+                src="https://sdsugeo.maps.arcgis.com/apps/Embed/index.html?webmap=fad1efce60c64c81a6a50d601682a29b&extent=-117.3052,32.6768,-116.9688,32.8434&zoom=true&previewImage=true&scale=true&legend=true&disable_scroll=true&theme=light">
               </iframe>
             </div>
           </div>
